   * added support for theme inheritance, to avoid duplicating mostly-unchanged code
 * new translation:
   * bulgarian
 * updated translations:
   * basque  
   * catalan
   * french
   * german
   * hungarian
   * italian
   * polish
   * slovak
   * spanish
   * swedish
   * russian
 * Added missing animations for:
   * Grand Knight
   * Death Knight
   * Lord
   * Master Bowman
 * fixed missing Deathblade in multiplayer
 * downloaded campaigns no longer require a restart to be able to play them
 * multiplayer game settings (map name, gold per village, ...) are saved now
 * new units:
   * Javelineer
 * unit balancing:
   * Swordsman: increase resistance to pierce and impact
   * Royal guard: increase resistance to pierce and impact
   * Pikeman: increase resistance to pierce, change attacks number and damage
   * Halberdier: increase resistance to pierce, increase blade damage, decrease
     pierce damage
 * Scenario revisions in Heir to the Throne:
   * Blackwater Port- Make the port look like more of a port, other minor changes
   that mute each other out
   * The Isle of Anduin- Extend shallow water around the Isle
   * The Bay of Pearls- Flip the map so the Ocean is on the West side
   * Muff Malal's Peninsula- Make it a penisula, give Konrad the option of fighting
     (bonus) or fleeing
 * flying creatures can now cross canyons
 * updated unix manpages
 * "," is no longer the column separator, it does not have to be escaped
   anymore in some translations, "=" is the new separator
 * clarify some ability descriptions
 * remove drain allowing to go past maximum hp
 * fix pathfinding bug (#11196)
 * fix untranslatable strings
 * fix "damage inflicted" statistic (incorrectly computed when defending)
 * fix missing diagonal projectiles on many units
 * fix sign glitch in The Rise of Wesnoth
 * fix map in 'A New Land' in The Rise of Wesnoth
 * code cleanups
 * remove obsolete tools: make_translation merge_translations
 * remove old unused images: