@@ -356,7 +356,7 @@ CXXLD = $(LDPREFIX) $(CXX)
 
 
 LIBS = $(SDL_IMAGE_LIBS) $(SDL_MIXER_LIBS) $(SDL_NET_LIBS) \
-	$(SDL_TTF_LIBS) $(SDL_LIBS) $(FREETYPE_LIBS) $(LIBINTL)
+	$(SDL_TTF_LIBS) $(SDL_LIBS) $(LIBZIPIOS) $(FREETYPE_LIBS) $(LIBINTL)
 
 if STATIC
 LDFLAGS += -all-static
